# rover-frontend

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  compose.yaml  package.xml
src/robot_gui_bridge/: package.xml
src/robot_gui_bridge/gui/: gui.html
static/: index.html  video.html
static/js/: video.js
